ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget1/input.ts.stderr
error[1115]: A 'continue' statement can only jump to a label of an enclosing iteration statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/ContinueStatements/parser_continueTarget1/input.ts:2:3
  |
2 |   continue target;
  |   ^^^^^^^^^^^^^^^^

